--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="layout-container">
-  <div class='header'>
-    <span>HOME | ABOUT | CONTACT</span>
+  <div class="header blog-title">
+    <h3><a routerLink="/" class="accent-color">Aziz Yokubjonov</a></h3>
+  </div>
+  <div class="header nav">
+    <a routerLink="/">HOME</a>
+    <a>ABOUT</a>
+    <a>CONTACT</a>
   </div>
   <div class="content">
     <router-outlet></router-outlet>
