--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,45 @@
 .layout-container {
-    display: grid;
-    grid-template-columns: auto 700px auto;
+  display: grid;
+  grid-template-columns: auto 800px auto;
 }
 
 .header {
-    height: 50px;
-    border-bottom: solid 1px silver;
-    grid-column: 2 / span 1;
-    min-width: 0;
-    background-color: #0984e3;
+  height: 50px;
+  grid-column: 2 / span 1;
+  min-width: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 16px;
+  letter-spacing: 1px;
+  border-bottom: 1px solid silver;
+
+  a:any-link {
+    text-decoration: none;
+  }
+}
+
+.nav {
+  a:any-link {
+    color: #303030;
+  }
 }
 
 .content {
-    grid-column: 2 / span 1;
-    min-width: 0;
+  grid-column: 2 / span 1;
+  min-width: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media only screen and (max-width: 700px) {
-    .layout-container {
-        display: block;
-        padding: 0 10px;
-    }
+  .layout-container {
+    display: block;
+    padding: 0 10px;
+  }
+}
+
+.blog-title {
 }
