--- a/src/app/post-card/post-card.component.scss
+++ b/src/app/post-card/post-card.component.scss
@@ -1,8 +1,12 @@
 .post-title:any-link {
-    color: inherit;
-    text-decoration: none;
+  text-decoration: none;
+  font-weight: 500;
 }
 
 .post-card {
-    margin: 20px auto;
+  margin: 20px auto;
+}
+
+.date {
+  font-size: 12px;
 }
