--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,1 +1,2 @@
 <blog-card *ngFor="let post of posts | async" [post]="post"></blog-card>
+<blog-card *ngFor="let post of posts | async" [post]="post"></blog-card>
