--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="layout-container">
   <div class="header blog-title">
-    <h3><a routerLink="/" class="accent-color">Aziz Yokubjonov</a></h3>
+    <h3><a routerLink="/" class="accent-color">Aziz Yokubjonov<span style="color:silver">'s blog</span></a></h3>
   </div>
   <div class="header nav">
     <a routerLink="/">HOME</a>
