--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1><a class="post-title accent-color" routerLink="/{{post.id}}">{{post.title}}</a></h1>
+  <h1><a class="post-title accent-color" routerLink="/{{post.slug}}">{{post.title}}</a></h1>
   <div class="date">
     {{post.dateTime | dateFormat}}
   </div>
