editing, more logic, redesign

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="header nav">
     <a routerLink="/">HOME</a>
-    <a>ABOUT</a>
-    <a>CONTACT</a>
+    <a routerLink="/about">ABOUT</a>
+    <a routerLink="/contact">CONTACT</a>
   </div>
   <div class="content">
     <router-outlet></router-outlet>
