--- a/src/app/add-post/add-post.component.html
+++ b/src/app/add-post/add-post.component.html
@@ -1,27 +1,1 @@
-<div>
-  <form [formGroup]="postForm">
-    <div>
-      <mat-form-field>
-        <input matInput placeholder="Title" formControlName="title">
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field class="full-width">
-        <textarea matInput cdkTextareaAutosize placeholder="Content" formControlName="content"></textarea>
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field>
-        <input matInput placeholder="Tags (separated by comma)" formControlName="tags">
-      </mat-form-field>
-    </div>
-    <div>
-      <button mat-stroked-button color="primary" type="submit" (click)="submitPost()">Post!</button>
-    </div>
-  </form>
-</div>
-<hr>
-<h2>Preview</h2>
-<div>
-  <blog-post [post]="previewPost"></blog-post>
-</div>
+<blog-post-editor (postSubmit)="post($event)"></blog-post-editor>
