--- a/src/app/read-post/read-post.component.html
+++ b/src/app/read-post/read-post.component.html
@@ -1,1 +1,1 @@
-<blog-post *ngIf="post$ | async; let post" [post]="post" [comments]="comments$ | async"></blog-post>
+<blog-post *ngIf="post$ | async; let post" [post]="post" [comments]="comments$ | async" [isSitePage]="isSitePage"></blog-post>
