meta & minor tweaks

--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -2,8 +2,8 @@
     <mat-card-title>
         <span class="accent-color">{{ comment.name }}</span>
     </mat-card-title>
-    <mat-card-subtitle>{{comment.dateTime | dateFormat}}</mat-card-subtitle>
-    <mat-card-content class="post-content">
+    <mat-card-subtitle class="date">{{comment.dateTime | dateFormat}}</mat-card-subtitle>
+    <mat-card-content class="post">
         {{ comment.text }}
     </mat-card-content>
 </mat-card>
