Add 404 handling, Firebase functions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,7 @@
   <div class="content">
     <router-outlet></router-outlet>
   </div>
+  <div class="footer">
+    © Copyright 2019 Aziz Yokubjonov
+  </div>
 </div>
