--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,6 +1,6 @@
 <mat-card class="comment">
     <mat-card-title>
-        <span class="accent-color">{{ comment.name }}</span>
+        <span class="accent-color">{{ comment.displayName }}</span>
     </mat-card-title>
     <mat-card-subtitle class="date">{{comment.dateTime | dateFormat}}</mat-card-subtitle>
     <mat-card-content class="post">
