--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,7 @@
 .content {
   grid-column: 2 / span 1;
   min-width: 0;
+  min-height: 400px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -42,4 +43,10 @@
 }
 .blog-title {
   font-size: 25px;
+}
+
+.footer {
+  grid-column: 2 / span 1;
+  text-align: center;
+  font-size: 12px;
 }
