--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -1,3 +1,5 @@
+@import "~highlight.js/scss/tomorrow-night.scss";
+
 .post {
   font-size: 18px;
   line-height: 30px;
@@ -41,4 +43,8 @@
     margin-right: 10px;
     border-radius: 5px;
   }
+}
+
+code {
+  @extend .hljs;
 }
