--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -45,6 +45,12 @@
   }
 }
 
-code {
+pre code {
   @extend .hljs;
+}
+
+code {
+  background-color: #f9f2f4;
+  color: #c7254e;
+  padding: 2px 4px;
 }
