remove year hardcoding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
     <router-outlet></router-outlet>
   </div>
   <div class="footer">
-    © Copyright 2019 Aziz Yokubjonov
+    © Copyright {{currentYear}} Aziz Yokubjonov
   </div>
 </div>
